add abstact factory